# habit-sprint

./: .gitignore  .mcp.json  COOKBOOK.md  Makefile  README.md  SKILLS.md  pyproject.toml
.claude/commands/: release.md
docs/: development-plan.md  prd.md
habit_sprint/: cli.py  db.py  engine.py  executor.py  formatters.py  reporting.py  validation.py  web.py
habit_sprint/static/: style.css
habit_sprint/templates/: base.html  dashboard.html  habit_detail.html  habit_form.html  habits_list.html  reports.html  settings.html  sprint_detail.html  sprint_form.html  sprint_habits.html  sprints_list.html
migrations/: 001_initial_schema.sql  002_sprint_habit_goals.sql
scripts/: consolidate_habits.py  reimport_historical.py
tests/: conftest.py  test_category_balance_api.py  test_category_report.py  test_cli.py  test_cli_integration.py  test_core_engine.py  test_cross_sprint_report.py  test_daily_score.py  test_db.py  test_entry_engine.py  test_error_handling.py  test_executor.py  test_formatters.py  test_habit_engine.py  test_habit_report.py  test_init_db.py  test_placeholder.py  test_reporting_integration.py  test_retro_engine.py  test_schema.py  test_sprint_dashboard.py  test_sprint_engine.py  test_sprint_habit_goals.py  test_sprint_report.py  test_streak_leaderboard.py  test_validation.py  test_web_api.py  test_week_view.py  test_weekly_completion.py
