[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "habit-sprint"
version = "0.1.0"
description = "A deterministic, JSON-native sprint-based habit tracking engine"
readme = "docs/prd.md"
requires-python = ">=3.12"
license = "MIT"

[project.scripts]
habit-sprint = "habit_sprint.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["habit_sprint*"]
